--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "firebase": "^10.12.3",
     "pinia": "^2.1.7",
     "vee-validate": "^4.13.2",
